# asclepias

./: .dockerignore  .gitignore  .gitlab-ci.yml  .hlint.yaml  01-intro.Rmd  02-design.Rmd  03-datatypes.Rmd  04-functiontypes.Rmd  06-toy-example.Rmd  07-specification.Rmd  COMMENTS.adoc  ChangeLog.md  Dockerfile  README.adoc  README.md  asclepias.R  cabal.project  default.nix  description.Rmd  description.html  flake.nix  haddock-output.txt  hasklepias.cabal  hie.yaml  index.Rmd  shell.nix
cohort-collector/: ChangeLog.md  README.adoc  README.md  cohort-collector.cabal  cohort-collector.nix  default.nix  help.txt
cohort-collector/app/: Main.hs
cohort-collector/src/: CohortCollection.hs  CohortCollectionTests.hs
cohort-collector/test/: ConstructPaths.hs  Main.hs
cohort-collector/test/tests/: README.md  manifestrw.txt  s3manifestrw.txt  testcw.golden  testcw.json  testcw1.json  testcw2.json  testcw3.json  testrw.golden  testrw.json  testrw.locations  testrw1.json  testrw2.json  testrw3.json
edm/: ChangeLog.md  README.md  default.nix  edm.cabal  edm.nix
edm/src/: EventData.hs
edm/src/EventData/: Accessors.hs  Aeson.hs  Arbitrary.hs  Context.hs  Core.hs  Predicates.hs
edm/test/: EventDataSpec.hs
edm/test/EventData/: AccessorsSpec.hs  AesonSpec.hs  ContextSpec.hs
event-data-model/: ChangeLog.md  README.md  event-data-model.cabal
event-data-model/src/: EventData.hs
event-data-model/src/EventData/: Accessors.hs  Arbitrary.hs  ClaimsSchema.hs  Facts.hs  Tests.hs
event-data-model/test/: EventDataSpec.hs  Main.hs
event-data-model/test/EventData/: AccessorsSpec.hs
event-data-model/test/claimevents-good/: good1.jsonl  good2.jsonl
event-data-theory/: .ghci  ChangeLog.md  LICENSE  README.adoc  README.md  event-data-theory.cabal
event-data-theory/src/: EventDataTheory.hs
event-data-theory/src/EventDataTheory/: Core.hs  EventLines.hs  Predicatable.hs  Test.hs  TheoryTest.hs  Utilities.hs
event-data-theory/test/: Main.hs  doctests.hs
event-data-theory/test/events-day-text-bad/: bad-2.jsonl  bad-3.jsonl  bad-4.jsonl  bad-5.jsonl
event-data-theory/test/events-day-text-good/: good-1.jsonl  good-2.jsonl  good-3.jsonl  good-4.jsonl
event-data-theory/test/events-good/: good-2.jsonl
event-data-theory/test/events-integer-silly-bad/: bad-1.jsonl  (+1 more)
hasklepias/: .gitignore  ChangeLog.md  DummyData.hs  Hasklepias.hs  Toying.hs  hasklepias.cabal  package.yaml  stack.yaml
hasklepias-appBuilder/: ChangeLog.md  README.md  hasklepias-appBuilder.cabal
hasklepias-core/: ChangeLog.md  LICENSE  README.adoc  README.md  hasklepias-core.cabal  testMe.jsonl
hasklepias-core/src/: AssessmentIntervals.hs  Cohort.adoc  Cohort.hs  Features.adoc  Features.hs  Tests.hs  Variable.hs
hasklepias-core/test/: FeaturesSpec.hs  Main.hs
hasklepias-examples/: ChangeLog.adoc  README.adoc  examples.tix  hasklepias-examples.cabal
hasklepias-examples/app/: Main.hs
hasklepias-examples/exampleCohortCwApp/: Main.hs
hasklepias-examples/exampleCohortRwApp/: Main.hs
hasklepias-examples/exampleData/: exampleData1.jsonl  exampleData3.jsonl
hasklepias-examples/exampleFilterApp/: Main.hs  exampleData.jsonl
hasklepias-examples/src/: CohortExamples.hs  ExampleAppCohort.hs  ExampleAppFilter.hs  ExampleCohort1.hs  ExampleEvents.hs  ExampleFeatures1.hs  ExampleFeatures2.hs  ExampleFeatures3.hs  ExampleFeatures4.hs  Examples.hs  FeatureExamples.hs  Main.hs  UndocumentedExamples.hs
hasklepias-examples/testCohortApp/: ConstructPaths.hs  Main.hs
hasklepias-examples/testFilterApp/: ConstructPaths.hs  Main.hs
hasklepias-main/: ChangeLog.md  hasklepias-main.cabal
hasklepias-main/app/: TestC1.hs  TestC2.hs  TestFold1.hs  TestFold2.hs
hasklepias-main/bench/: Main.hs
hasklepias-main/exampleApp/: Main.hs
hasklepias-main/exampleApp-test/: BuildLargeTestData.hs  ConstructPaths.hs  Main.hs
hasklepias-main/exampleAppCW/: Main.hs
hasklepias-main/exampleAppRW/: Main.hs
hasklepias-main/exampleData/: exampleData2.jsonl
hasklepias-main/exampleFilterApp-test/: ConstructPaths.hs  Main.hs
hasklepias-main/exampleTestUtils/: HasklepiasMainTestUtils.hs
hasklepias-main/examples/: ExampleCohort1.hs  ExampleEvents.hs  ExampleFeatures1.hs  ExampleFeatures2.hs  ExampleFeatures4.hs  Main.hs
hasklepias-main/lineFilter-demo/: Main.hs  badInputs1.jsonl  goodInputs1.jsonl
hasklepias-main/lineFilter-test/: Main.hs  MainA.hs  MainC.hs  MainE.hs  MainF.hs  benchmark.sh  lineFilterTestInputs-1.jsonl
hasklepias-main/monarch-test/: Main.hs  output.golden
hasklepias-main/src/: Hasklepias.hs  Monarch.hs  Stype.hs
hasklepias-main/test/: Main.hs  doctests.hs
hasklepias-main/testDir/: P0000.cabal  README.adoc  cabal.project  config.dhall
hasklepias-templates/: ChangeLog.md  README.md  hasklepias-templates.cabal  templates.tix
hasklepias-templates/Templates/: FeatureReqs.hs  Features.hs  TestUtilities.hs  Tests.hs
hasklepias-templates/template-test/: Main.hs
hasklepias/Hasklepias/: Context.hs  ContextExamples.hs  Events.hs  ExampleData0.json  ExampleData1.json  IntervalAlgebra.hs  IntervalAlgebraSpec.hs  exploreAeson.hs
hasklepias/_old/: DummyData.hs
hasklepias/app/: Main.hs
hasklepias/data/: ExampleCode.json  ExampleCodebook.json  ExampleDiagnosis.json  ExampleInsurance.json  ExampleLab.json  ExampleLocation.json  ExampleProvider.json  ExampleValue.json
hasklepias/src/: DummyData.hs  Hasklepias.hs
hygiea/: hygiea.cabal  planning.adoc
hygiea/app/: Main.hs
hygiea/planning/: README.adoc  hygiea-planning.cabal
hygiea/src/: Planning.hs
maybe-toxic-tutorial/: CHANGELOG.md  README.md  hspec-discover.tix  maybe-toxic-tutorial.cabal
maybe-toxic-tutorial/src/: FunctionalExamples.hs  IntervalExamples.hs  IntervalExercises.hs  MaybeEitherExamples.hs  Raskell.R  Raskell.hs  TypeExamples.hs  TypeExercises.hs
maybe-toxic-tutorial/test/: Tests.hs
monarch/: CHANGELOG.md  README.adoc  monarch.cabal  planning.adoc
monarch/app/: Main.hs
monarch/src/: Monarch.hs
stype/: stype.cabal
stype/test/: Main.hs
utils/: CHANGELOG.md  hasklepias-build-utils.cabal
utils/cabal-name/: Main.hs
(+904 files in other folders)
