cabal-version:  2.2
name:           cohort-collector
version:        0.20.3
description:    Please see the README on GitHub at <https://github.com/novisci/asclepias#readme>
homepage:       https://github.com/novisci/asclepias/#readme
bug-reports:    https://github.com/novisci/asclepias/issues
author:         Bradley Saul
maintainer:     bsaul@novisci.com
copyright:      NoviSci, Inc
category:       Data Science
synopsis:       embedded DSL for defining epidemiologic cohorts
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.adoc
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/novisci/asclepias

library
  exposed-modules:
      CohortCollection
  hs-source-dirs:
      src
  build-depends:
    -- Internal
      hasklepias-core
    , hasklepias-appBuilder
    
    -- External
    , aeson >= 2.0.2.0
    , amazonka >= 2.0
    , amazonka-s3 >= 2.0
    , base >=4.14 && <5
    , bytestring >= 0.11
    , conduit == 1.3.4.2
    , optparse-applicative
    , text >= 2.0 
  default-language: Haskell2010

executable cohort-collector
  main-is: Main.hs
  hs-source-dirs:
      app
  build-depends:
      -- Internal
       hasklepias-core
     , hasklepias-appBuilder
     , cohort-collector

    -- External
     , base >=4.14 && <5
  default-language: Haskell2010

test-suite collector-test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      test
  build-depends:
      cohort-collector
    , base >=4.14 && <5
    , tasty  == 1.4.1
    , tasty-silver == 3.3.1
    , bytestring
  default-language: Haskell2010