cabal-version:  2.2
name:           edm 
version:        0.20.0
description:    Please see the README on GitHub at <https://github.com/novisci/asclepias#readme>
homepage:       https://github.com/novisci/asclepias/#readme
bug-reports:    https://github.com/novisci/asclepias/issues
author:         Bradley Saul
maintainer:     bsaul@novisci.com
copyright:      NoviSci, Inc
category:       Data Science
synopsis:       event data model 
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    -- ChangeLog.md

source-repository head
  type: git
  location: https://github.com/novisci/asclepias

library
  exposed-modules:
      EventData
      EventData.Core
      EventData.Arbitrary
      EventData.Aeson
      EventData.Context
      EventData.Context.Arbitrary
      EventData.Context.Domain
      EventData.Context.Domain.Demographics
      EventData.Context.Domain.Enrollment
      EventData.Accessors
      EventData.Predicates
  hs-source-dirs:
      src
  build-depends:
      aeson >=1.4.0.0 && <2
    , base >=4.14 && <4.15
    , bytestring == 0.10.12.0
    , containers == 0.6.5.1
    , contravariant >= 1.4
    , interval-algebra == 0.10.2
    , lens == 5.0.1
    , lens-aeson == 1.1.1
    , safe >= 0.3
    , text == 1.2.4.1
    , time >= 1.11
    , QuickCheck
    , vector == 0.12.2.0
    , witherable == 0.4.1
  default-language: Haskell2010

test-suite edm-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      EventDataSpec
      EventData.AesonSpec
      EventData.AccessorsSpec
      EventData.ContextSpec
      EventData.Context.DomainSpec
      EventData.Context.Domain.DemographicsSpec
      Paths_edm
  autogen-modules:
      Paths_edm
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      edm
    , aeson >=1.4.0.0 && <2
    , base >=4.7 && <5
    , bytestring >=0.10
    , containers >=0.6.0
    , hspec
    , interval-algebra == 0.10.2
    , lens == 5.0.1
    , text >=1.2.3
    , time >=1.11
    , unordered-containers >=0.2.10
    , QuickCheck
  default-language: Haskell2010


