cabal-version:  2.2
name:           event-data-model 
version:        0.24.0
description:    Please see the README on GitHub at <https://github.com/novisci/asclepias#readme>
homepage:       https://github.com/novisci/asclepias/#readme
bug-reports:    https://github.com/novisci/asclepias/issues
author:         Bradley Saul
maintainer:     bsaul@novisci.com
copyright:      NoviSci, Inc
category:       Data Science
synopsis:       event data model 
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/novisci/asclepias

library
  exposed-modules:
      EventData
      EventData.ClaimsSchema
      EventData.ClaimsSchema.Accessors
      EventData.ClaimsSchema.Predicates
      EventData.ClaimsSchema.Tests
      EventData.Facts
      EventData.Tests
  other-modules: 
      EventData.Domain.Death
      EventData.Domain.Demographics
      EventData.Domain.Diagnosis
      EventData.Domain.Eligibility
      EventData.Domain.Enrollment
      EventData.Domain.Labs
      EventData.Domain.Medication
      EventData.Domain.Procedure
      EventData.Facts.Claim
      EventData.Facts.Code
      EventData.Facts.Codebook
      EventData.Facts.Exchange
      EventData.Facts.Fill
      EventData.Facts.Hospitalization    
      EventData.Facts.LabValue
      EventData.Facts.Location
      EventData.Facts.Plan
      EventData.Facts.Provider
  hs-source-dirs:
      src
  build-depends:
      -- Internal
      event-data-theory

      -- External
    , aeson >= 2.0.2.0
    , base >=4.14 && <5
    , bytestring >= 0.11
    , generic-lens == 2.2.0.0
    , microlens == 0.4.12.0
    , tasty >= 1.4
    , tasty-hunit >= 0.10
    , text == 1.2.4.1
    , time >= 1.11
    , witherable == 0.4.1
  build-tool-depends:
    autoexporter:autoexporter
  default-language: Haskell2010

test-suite event-data-model-test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      event-data-model, base
  default-language: Haskell2010


