cabal-version:  2.2
name:           event-data-theory 
version:        0.27.0
description:    Please see the README on GitHub at <https://github.com/novisci/asclepias#readme>
homepage:       https://github.com/novisci/asclepias/#readme
bug-reports:    https://github.com/novisci/asclepias/issues
author:         Bradley Saul
maintainer:     bsaul@novisci.com
copyright:      NoviSci, Inc
category:       Data Science
synopsis:       event data theory 
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.adoc
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/novisci/asclepias

library
  exposed-modules:
      EventDataTheory
      EventDataTheory.Core
      EventDataTheory.EventLines
      EventDataTheory.Test
      EventDataTheory.TheoryTest
      EventDataTheory.Utilities
  hs-source-dirs:
      src
  build-depends:
      base >=4.14 && <4.15
    , aeson
    , binary
    , bytestring
    , containers
    , dhall
    , deepseq
    , filepath
    , interval-algebra >= 2.0.1
    , QuickCheck
    , safe
    , scientific
    , tasty
    , tasty-hunit
    , tasty-silver
    , time >= 1.11.1
    , text
    , witch
    , witherable
  default-language: Haskell2010

test-suite tests
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      test
  build-depends:
      event-data-theory, base
  default-language: Haskell2010
