cabal-version:  2.2
name:           hasklepias-appBuilder
version:        0.1.0
description:    Please see the README on GitHub at <https://github.com/novisci/asclepias#readme>
homepage:       https://github.com/novisci/asclepias/#readme
bug-reports:    https://github.com/novisci/asclepias/issues
author:         Bradley Saul
maintainer:     bsaul@novisci.com
copyright:      NoviSci, Inc
category:       Data Science
synopsis:       embedded DSL for defining epidemiologic cohorts
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/novisci/asclepias

library
  exposed-modules:
      Hasklepias.AppUtilities
      Hasklepias.MakeCohortApp
      Hasklepias.MakeFilterApp
      TestUtils.BuildLargeTestData
      TestUtils.SessionId
      TestUtils.TestCases
  hs-source-dirs:
      src
  build-depends:
    -- Internal packages
      event-data-theory
    , hasklepias-core

    -- External packages
    , aeson >= 2.0.3.0
    , amazonka >= 2.0
    , amazonka-core >= 2.0
    , amazonka-sts >= 2.0
    , amazonka-s3 >= 2.0
    , base >=4.14 && <5
    , bytestring == 0.11.1.0
    , containers == 0.6.5.1
    , co-log-core == 0.3.0.0
    , conduit == 1.3.4.2
    , conduit-extra == 1.3.5
    , generic-lens == 2.2.0.0
    , interval-algebra == 1.3.0
    , microlens == 0.4.12.0
    , optparse-applicative == 0.16.1.0
    , regex-compat >= 0.95
    , tasty  == 1.4.1
    , tasty-silver == 3.3.1
    , time >= 1.11
    , text >= 2.0 
    , vector == 0.12.2.0
    , witch >= 1.0
  default-language: Haskell2010
