cabal-version:  2.2
name:           hasklepias-appBuilder
version:        0.1.0
description:    Please see the README on GitHub at <https://github.com/novisci/asclepias#readme>
homepage:       https://github.com/novisci/asclepias/#readme
bug-reports:    https://github.com/novisci/asclepias/issues
author:         Bradley Saul
maintainer:     bsaul@novisci.com
copyright:      NoviSci, Inc
category:       Data Science
synopsis:       embedded DSL for defining epidemiologic cohorts
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/novisci/asclepias

library
  exposed-modules:
      Hasklepias.AppUtilities
      Hasklepias.MakeCohortApp
      Hasklepias.MakeFilterApp
      TestUtils.BuildLargeTestData
      TestUtils.ConstructTestTree
      TestUtils.SessionId
      TestUtils.S3Utils
      TestUtils.TestCases
  hs-source-dirs:
      src
  build-depends:
    -- Internal packages
      event-data-theory
    , hasklepias-core

    -- External packages
    , aeson
    , amazonka
    , amazonka-s3
    , base >=4.14
    , bytestring
    , containers
    , co-log-core
    , conduit
    , conduit-extra
    , generic-lens
    , interval-algebra
    , microlens
    , optparse-applicative
    , process
    , regex-compat
    , tasty
    , tasty-silver
    , time
    , text
    , vector
    , witch
  default-language: Haskell2010
