cabal-version:  2.2
name:           hasklepias-core
version:        0.24.0
description:    Please see the README on GitHub at <https://github.com/novisci/asclepias#readme>
homepage:       https://github.com/novisci/asclepias/#readme
bug-reports:    https://github.com/novisci/asclepias/issues
author:         Bradley Saul
maintainer:     bsaul@novisci.com
copyright:      NoviSci, Inc
category:       Data Science
synopsis:       embedded DSL for defining epidemiologic cohorts
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.adoc
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/novisci/asclepias

library
  exposed-modules:
      AssessmentIntervals
      Features
      Features.Attributes
      Features.Core
      Features.Featureable
      Features.Output
      Features.Featureset
      Cohort
      Cohort.Core
      Cohort.Output
      Cohort.Criteria
      Cohort.IndexSet
      Tests
  other-modules:
      Tests.AssessmentIntervals
      Tests.Features
      Tests.Features.Core
      Tests.Features.Output
      Tests.Cohort
      Tests.Cohort.Core
      Tests.Cohort.Criteria
      Tests.Cohort.Output
  hs-source-dirs:
      src
  build-depends:
      aeson
    , base >=4.14 && <5
    , binary
    , bytestring
    , containers
    , ghc-prim
    , interval-algebra
    , microlens
    , nonempty-containers
    , QuickCheck
    , safe
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , template-haskell
    , text
    , time
    , witch 
    , witherable
  default-language: Haskell2010

test-suite hasklepias-core-test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends: hasklepias-core, base 
  default-language: Haskell2010
