cabal-version:  2.2
name:           hasklepias-core
version:        0.29.0
description:    Please see the README on GitHub at <https://github.com/novisci/asclepias#readme>
homepage:       https://github.com/novisci/asclepias/#readme
bug-reports:    https://github.com/novisci/asclepias/issues
author:         Bradley Saul
maintainer:     bsaul@novisci.com
copyright:      NoviSci, Inc
category:       Data Science
synopsis:       embedded DSL for defining epidemiologic cohorts
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.adoc
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/novisci/asclepias

library
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints

  exposed-modules:
      -- Top-level
      Features
      Cohort
      Tests
      Variable
      -- Cohort
      Cohort.Core
      Cohort.Cohort
      Cohort.Output
      Cohort.Criteria
      Cohort.IndexSet
  other-modules:
      -- Variable
      Variable.R.SEXP
      Variable.R.Stype
      Variable.R.Factor
      Variable.Variable
      Variable.Constraints
      Variable.Attributes
      -- Features
      Features.Attributes
      Features.Core
      Features.Featureable
      Features.Output
      Features.Featureset
      -- Tests
      Tests.Features
      Tests.Features.Core
      Tests.Features.Output
      Tests.Cohort
      Tests.Cohort.Core
      Tests.Cohort.Criteria
      Tests.Cohort.Cohort
      Tests.Cohort.Output
      Tests.Variable
  hs-source-dirs:
      src
  build-depends:
      aeson
    , base >=4.14 && <5
    , binary
    , bytestring
    , containers
    , ghc-prim
    , microlens
    , nonempty-containers
    , QuickCheck
    , safe
    , singletons
    , singletons-th
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , template-haskell
    , text
    , time >= 1.11.1
    , vector
    , vector-algorithms
    , witch 
    , witherable
    , event-data-theory
  default-language: Haskell2010

test-suite hasklepias-core-test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends: hasklepias-core, base 
  default-language: Haskell2010
