cabal-version:  2.2
name:           hasklepias-examples
version:        0.24.0
description:    Please see the README on GitHub at <https://github.com/novisci/asclepias#readme>
homepage:       https://github.com/novisci/asclepias/#readme
bug-reports:    https://github.com/novisci/asclepias/issues
author:         Bradley Saul
maintainer:     bsaul@novisci.com
copyright:      NoviSci, Inc
category:       Data Science
synopsis:       embedded DSL for defining epidemiologic cohorts
license:        BSD-3-Clause
--license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/novisci/asclepias

library
  exposed-modules:
      Examples
      CohortExamples
      CohortExamples.Example1
      FeatureExamples
      FeatureExamples.Example1
      FeatureExamples.Example2
      FeatureExamples.Example3
      FeatureExamples.Example4
      ExampleEvents
  hs-source-dirs:
      src
  build-depends:
    , event-data-model
    , hasklepias-main
    , base >=4.14 && <5
  default-language: Haskell2010
  default-extensions: 
      NoImplicitPrelude
      OverloadedStrings
      LambdaCase
      DataKinds
      FlexibleContexts
      FlexibleInstances
      DeriveGeneric
      DuplicateRecordFields
      MultiParamTypeClasses
      TypeApplications

test-suite examples
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      test
  build-depends:
      hasklepias-examples, base
  default-language: Haskell2010


