cabal-version:  2.2
name:           hasklepias-examples
version:        0.1.0
description:    Please see the README on GitHub at <https://github.com/novisci/asclepias#readme>
homepage:       https://github.com/novisci/asclepias/#readme
bug-reports:    https://github.com/novisci/asclepias/issues
author:         Bradley Saul
maintainer:     bsaul@novisci.com
copyright:      NoviSci, Inc
category:       Data Science
synopsis:       embedded DSL for defining epidemiologic cohorts
license:        BSD-3-Clause
--license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.adoc
    ChangeLog.adoc

source-repository head
  type: git
  location: https://github.com/novisci/asclepias

library
  exposed-modules:
      Examples
      AppExamples.CohortApp
      AppExamples.FilterApp
      CohortExamples
      CohortExamples.Example1
      FeatureExamples
      FeatureExamples.Example1
      FeatureExamples.Example2
      FeatureExamples.Example3
      FeatureExamples.Example4
      ExampleEvents
  hs-source-dirs:
      src
  build-depends:
      aeson >= 2.0.3.0
    , base >=4.14 && <5
    , hasklepias-main
  default-language: Haskell2010
  default-extensions:
  -- NOTE: 
  -- DataKinds and TypeApplications are used frequently in the examples
  -- but brittany v0.13.1.2 does NOT format code idempotently unless
  -- these extensions are enables within module.
  -- The brittany formatter does not appear to check the .cabal file
  -- for enabled extensions. 
  -- Hence, these extensions are turned on as needed within modules.
      NoImplicitPrelude
      OverloadedStrings
      LambdaCase
      FlexibleContexts
      FlexibleInstances
      DeriveGeneric
      MultiParamTypeClasses

test-suite examples
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      test
  build-depends:
      hasklepias-examples, base
  default-language: Haskell2010

executable exampleCohortCwApp
  main-is: Main.hs
  hs-source-dirs:
      exampleCohortCwApp
  build-depends:
      hasklepias-examples
    , hasklepias-main
  default-language: Haskell2010

executable exampleCohortRwApp
  main-is: Main.hs
  hs-source-dirs:
      exampleCohortRwApp
  build-depends:
      hasklepias-examples
    , hasklepias-main
  default-language: Haskell2010

executable exampleFilterApp
  main-is: Main.hs
  hs-source-dirs:
      exampleFilterApp
  build-depends:
      hasklepias-examples
    , hasklepias-main
  default-language: Haskell2010
