cabal-version:  2.2
-- tag::devel-docs-package-properties[]
name:           hasklepias-main
version:        0.26.0
description:    Please see the README on GitHub at <https://github.com/novisci/asclepias#readme>
homepage:       https://github.com/novisci/asclepias/#readme
bug-reports:    https://github.com/novisci/asclepias/issues
author:         Bradley Saul
maintainer:     bsaul@novisci.com
copyright:      NoviSci, Inc
category:       Data Science
synopsis:       embedded DSL for defining epidemiologic cohorts
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md
-- end::devel-docs-package-properties[]

source-repository head
  type: git
  location: https://github.com/novisci/asclepias

-- tag::devel-docs-components[]
library
  exposed-modules:
      Hasklepias
      Hasklepias.Misc
      Hasklepias.Reexports
  hs-source-dirs:
      src
  build-depends:
    -- Internal packages
      event-data-theory
    , hasklepias-appBuilder
    , hasklepias-core
    , hasklepias-templates
    , stype
    -- External packages
    , aeson 
    , base >=4.14 && <5
    , containers 
    , flow
    , generic-lens 
    , microlens 
    , safe 
    , tasty  
    , tasty-hunit 
    , text 
    , time
    , tuple
    , witherable 
    , witch 
  default-language: Haskell2010
-- end::devel-docs-components[]
